// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Normalizer > should also normalize col & row totals in buckets 1`] = `
[
  {
    "items": [
      {
        "measure": {
          "definition": {
            "measureDefinition": {
              "item": {
                "identifier": "acugFHNJgsBy",
                "type": "measure",
              },
            },
          },
          "localIdentifier": "m_acugFHNJgsBy",
        },
      },
      {
        "measure": {
          "definition": {
            "measureDefinition": {
              "item": {
                "identifier": "aangOxLSeztu",
                "type": "measure",
              },
            },
          },
          "localIdentifier": "m_aangOxLSeztu",
        },
      },
    ],
    "localIdentifier": "bucket",
  },
  {
    "items": [
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.owner.region",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.owner.region",
        },
      },
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.product.id.name",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.product.id.name",
        },
      },
    ],
    "localIdentifier": "attribute",
    "totals": [
      {
        "attributeIdentifier": "a_label.product.id.name",
        "measureIdentifier": "m_acugFHNJgsBy",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a_label.product.id.name",
        "measureIdentifier": "m_acugFHNJgsBy",
        "type": "max",
      },
    ],
  },
  {
    "items": [
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.account.id.name",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.account.id.name",
        },
      },
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.owner.id.name",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.owner.id.name",
        },
      },
    ],
    "localIdentifier": "columns",
    "totals": [
      {
        "attributeIdentifier": "a_label.owner.id.name",
        "measureIdentifier": "m_acugFHNJgsBy",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a_label.owner.id.name",
        "measureIdentifier": "m_acugFHNJgsBy",
        "type": "avg",
      },
    ],
  },
]
`;

exports[`Normalizer > should normalize arithmetic measures 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
              "m_acugFHNJgsBy",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures when mixed between their operands 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures when mixed between their operands with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "alias": "Ratio of Won and Lost",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
              "m_acugFHNJgsBy",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize derived measures 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_acugFHNJgsBy",
            "popAttribute": {
              "identifier": "closed.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_m_acugFHNJgsBy_closed.year",
      },
    },
    {
      "measure": {
        "definition": {
          "previousPeriodMeasure": {
            "dateDataSets": [
              {
                "dataSet": {
                  "identifier": "closed.dataset.dt",
                },
                "periodsAgo": 1,
              },
            ],
            "measureIdentifier": "m_acugFHNJgsBy",
          },
        },
        "localIdentifier": "m_m_acugFHNJgsBy_previous_period",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize derived measures with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_acugFHNJgsBy",
            "popAttribute": {
              "identifier": "closed.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_m_acugFHNJgsBy_closed.year",
      },
    },
    {
      "measure": {
        "definition": {
          "previousPeriodMeasure": {
            "dateDataSets": [
              {
                "dataSet": {
                  "identifier": "closed.dataset.dt",
                },
                "periodsAgo": 1,
              },
            ],
            "measureIdentifier": "m_acugFHNJgsBy",
          },
        },
        "localIdentifier": "m_m_acugFHNJgsBy_previous_period",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize duplicate attributes and measures 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region_1",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.owner.region_1",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy_1",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize duplicate attributes and measures with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region_1",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.owner.region_1",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy_1",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize measure value filters 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [
    {
      "measureValueFilter": {
        "condition": {
          "comparison": {
            "operator": "EQUAL_TO",
            "value": 1,
          },
        },
        "measure": {
          "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
        },
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
              "m_acugFHNJgsBy",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize measure value filters with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [
    {
      "measureValueFilter": {
        "condition": {
          "comparison": {
            "operator": "EQUAL_TO",
            "value": 1,
          },
        },
        "measure": {
          "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
        },
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_aangOxLSeztu",
              "m_acugFHNJgsBy",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      },
    },
    {
      "measure": {
        "alias": "Ratio of Won and Lost",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
              "m_acugFHNJgsBy",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_68d94d71b9317a58cd6c5b9a3f71f488",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize ranking filters 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": [
    {
      "rankingFilter": {
        "attributes": [
          {
            "localIdentifier": "a_label.owner.region",
          },
        ],
        "measure": {
          "localIdentifier": "m_acugFHNJgsBy",
        },
        "operator": "TOP",
        "value": 1,
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize ranking filters with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": [
    {
      "rankingFilter": {
        "attributes": [
          {
            "localIdentifier": "a_label.owner.region",
          },
        ],
        "measure": {
          "localIdentifier": "m_acugFHNJgsBy",
        },
        "operator": "TOP",
        "value": 1,
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple attributes and measures 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "aggregation": "max",
            "item": {
              "identifier": "fact.opportunitysnapshot.amount",
              "type": "fact",
            },
          },
        },
        "localIdentifier": "m_fact.opportunitysnapshot.amount_max",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "computeRatio": true,
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu_ratio",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple attributes and measures with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.owner.region",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.product.id.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_label.owner.region",
        "a_label.product.id.name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "alias": "Max Amount",
        "definition": {
          "measureDefinition": {
            "aggregation": "max",
            "item": {
              "identifier": "fact.opportunitysnapshot.amount",
              "type": "fact",
            },
          },
        },
        "localIdentifier": "m_fact.opportunitysnapshot.amount_max",
      },
    },
    {
      "measure": {
        "alias": "Amount with Ratio",
        "definition": {
          "measureDefinition": {
            "computeRatio": true,
            "item": {
              "identifier": "aangOxLSeztu",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu_ratio",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple measures with filters 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "filters": [
              {
                "negativeAttributeFilter": {
                  "displayForm": {
                    "identifier": "label.owner.region",
                    "type": "displayForm",
                  },
                  "notIn": {
                    "values": [
                      "East Coast",
                    ],
                  },
                },
              },
            ],
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy_a85dcdac",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple measures with filters with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "filters": [
              {
                "negativeAttributeFilter": {
                  "displayForm": {
                    "identifier": "label.owner.region",
                    "type": "displayForm",
                  },
                  "notIn": {
                    "values": [
                      "East Coast",
                    ],
                  },
                },
              },
            ],
            "item": {
              "identifier": "acugFHNJgsBy",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy_a85dcdac",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;
